--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
                 <div class="contact-info">
                   <h1>Adress</h1>
-                  <h2>Chitkara University Rajpua , Punjab</h2>
+                  <h2>Chitkara University Rajpura , Punjab</h2>
                 </div>
             </div>
           </div>
