--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </div>
       </section>
       <!--end languages learned-->
+    
       <!--project section-->
       <section id="projects">
         <div class="projects container">
@@ -117,7 +118,7 @@
                 <h2>Language used: C++</h2>
                 <p>
                     Discription: It is a game for two players, X and O, who tke tuen marking the spaces in 3x3 grid.The player who succeeds in placing three of their marks in a horizontal vertical or digonal row wins the game.</p>
-                <p><a class="cta" href="https://github.com/SomyaGupta88/data_structures/blob/c%2B%2B_proj/TicTacToe.cpp">Github Link</a></p>
+                <p><a class="cta" href="https://github.com/SomyaGupta88/data_structures/blob/c%2B%2B_proj/TicTacToe.cpp" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
                 <img src="./img/tictactoe.jpg" alt="img">
@@ -128,7 +129,7 @@
                 <h1>School management system</h1>
                 <h2>Language used: HTML5</h2>
                 <p>Discription: A html based information system to manage school related data. It contains various actors like students, staff, teachers and all the information related to them like school fee structre, academic details, attendance criteria, attendance of the students, addmition criteria, school events and all such things.</p>
-                <p><a class="cta" href="https://github.com/SomyaGupta88/front_end/tree/school_management_system">Github Link</a></p>
+                <p><a class="cta" href="https://github.com/SomyaGupta88/front_end/tree/school_management_system" targer="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
                 <img src="./img/school-management.jpg" alt="img">
@@ -139,7 +140,7 @@
                 <h1>Notes App</h1>
                 <h2>Language used: Node.js</h2>
                 <p>Discription: A note taking app which add, remove, read and list the notes you want. It also saves the data in the jason file.</p>
-                <p><a class="cta" href="https://github.com/SomyaGupta88/back_end/tree/Note-App">Github Link</a></p>
+                <p><a class="cta" href="https://github.com/SomyaGupta88/back_end/tree/Note-App" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
                 <img src="./img/notes.png" alt="img">
@@ -150,7 +151,7 @@
                 <h1>Shuffling rabbit game</h1>
                 <h2>Language used: C++
                 <p>Discription:A game in c++ language using rand() function in which player have to guess that in which hole the rabbit is present among the three holes.</p>
-                <p><a class="cta" href="https://github.com/SomyaGupta88/data_structures/blob/c%2B%2B_proj/guess_game.cpp">Github Link</a></p>
+                <p><a class="cta" href="https://github.com/SomyaGupta88/data_structures/blob/c%2B%2B_proj/guess_game.cpp" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
                 <img src="./img/rabbit.jpg" alt="img">
