--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
       </section>
       <!--end languages learned-->
-    
+
       <!--project section-->
       <section id="projects">
         <div class="projects container">
@@ -129,7 +129,7 @@
                 <h1>School management system</h1>
                 <h2>Language used: HTML5</h2>
                 <p>Discription: A html based information system to manage school related data. It contains various actors like students, staff, teachers and all the information related to them like school fee structre, academic details, attendance criteria, attendance of the students, addmition criteria, school events and all such things.</p>
-                <p><a class="cta" href="https://github.com/SomyaGupta88/front_end/tree/school_management_system" targer="_blank">Github Link</a></p>
+                <p><a class="cta" href="https://github.com/SomyaGupta88/front_end/tree/school_management_system" target="_blank">Github Link</a></p>
               </div>
               <div class="project-img">
                 <img src="./img/school-management.jpg" alt="img">
