--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               As a programmer i have command in C++ language . My strength is my way of thinking that i take both success and failure in balances manner.I have friendly nature with all peoples whether they are my known or unknown.
               As a person i totaly believe on the life quote </p>
               <p>"We live only once, but if we are doing it right, once is enough."</p>
-            <p><a href="Somya_Resume.pdf" class="cta" download>download resume</a><a href="https://github.com/SomyaGupta88" class="cta" target="_blank">Visit Github</a><p>
+            <p><a href="saumya_Resume.pdf" class="cta" download>download resume</a><a href="https://github.com/SomyaGupta88" class="cta" target="_blank">Visit Github</a><p>
           </div>
         </div>
       </section>
